fix(v1.5.0): make the drop-in replacement ZIP actually convert a server
Reported from a live test: unzip, swap the launcher, run, and get
"Could not find or load main class net.multiforge.runtime.bootstrap.Main".

Method 2 has never worked. Three independent reasons:

- net.multiforge.runtime.bootstrap.Main does not exist anywhere in this
  repo. It was named only by the archive's two launcher templates.
- The classpath could not have booted a server anyway: -cp
  "libraries/multiforge/*" is one Minecraft-free library jar. No
  Minecraft, no NeoForge, no ModLauncher.
- The premise was wrong. MultiForge is a fork; the regionized tick loop
  lives in patches to net.minecraft.* and net.neoforged.* inside the
  patched NeoForge jar. A library beside a stock server changes nothing.

The archive also cannot ship a finished install: ~180 MB containing
Mojang's server jar and the derivatives patched from it, none
redistributable. So it now embeds the fork installer plus a converter
that runs it in place — the only lawful shape for an in-place upgrade.

Also fixed, both found while verifying the above:

- The launcher operators actually get had no JDK preflight. v1.3.18 put
  it in run.multiforge.sh, the launcher that could never run; the
  installer's run.sh calls bare java. The converter now rewrites it.
- The preflight message never printed the version it detected.
  cat >&2 <<'PREFLIGHT_FAIL' is a quoted heredoc, so it emitted the
  literal "${JAVA_MAJOR:-unknown}". Verified fixed against a faked JDK 26.

Removed the `install` subcommand (same nonexistent main class) and the
runtime-jar bundling; build-zip now requires --installer. Rewrote
scripts/install.sh, which called the deleted subcommand with the wrong
args and still prompted for a license.key that ground rule 2 records as
removed. release.yml builds the archive in build-fork-installer, which
is where its input exists.

Verified end-to-end, not just built: a simulated stock NeoForge dir was
converted with the real